--- a/samoklava.yaml
+++ b/samoklava.yaml
@@ -3,6 +3,21 @@ units:
   ky: cy
   px: 2
   py: 2
+  kyt: 0.5(ky+py)
+  kyb: -0.5(ky+py)
+  kxr: 0.5(kx+px)
+  kxl: -0.5(kx+px)
+  board_thickness: 1.6
+  key_clip_depth: 1.3
+  key_surface_depth: 2.2
+  case_bottom_thickness: 1.6
+  case_wall_thickness: 1.6
+  case_bottom_offset: 3.15
+  case_leg_mount_thickness: 8
+  case_leg_mount_width: 12
+  case_leg_mount_hole_depth: 7
+  case_leg_mount_hole_diameter: 5
+  case_depth: case_bottom_thickness + case_bottom_offset + board_thickness + key_surface_depth + 1
 points:
   key:
     footprints:
@@ -93,11 +108,187 @@ points:
 outlines:
   # board dimensions according to JLCPCB: 122.28 mm x 101.05 mm
   exports:
+    _screw_holes:
+      top_left:
+        type: circle
+        anchor:
+          - ref: matrix_ring_home
+            shift: [-0.5 kx, -0.2 ky]
+        radius: 1.05
+      bottom_left:
+        type: circle
+        anchor:
+          - ref: matrix_pinky_bottom
+            shift: [0.5 kx, -0.2 ky]
+        radius: 1.05
+      top_right:
+        type: circle
+        anchor:
+          - ref: matrix_inner_top
+            shift: [-0.5 kx, -0.2 ky]
+        radius: 1.05
+      palm:
+        type: circle
+        anchor:
+          - ref: matrix_index_bottom
+            shift: [-0.5 kx, -0.2 ky]
+        radius: 1.05
+      thumb:
+        type: circle
+        anchor:
+          - ref: thumbfan_far_thumb
+            shift: [-0.55 kx, -0.2 ky]
+        radius: 1.05
     raw:
       - type: keys
         side: left
         size: [kx + px, ky + py]
         corner: px
+    _board_perimeter:
+      - type: polygon
+        points:
+          # top of fingers
+          - ref: matrix_pinky_top
+            shift: [kxl, kyt]
+          - ref: matrix_pinky_top
+            shift: [kxr, kyt]
+          - ref: matrix_ring_top
+            shift: [kxl, kyt]
+          - ref: matrix_ring_top
+            shift: [kxr, kyt]
+          - ref: matrix_middle_top
+            shift: [kxl, kyt]
+          - ref: matrix_middle_top
+            shift: [kxr, kyt]
+          - ref: matrix_index_top
+            shift: [kxl, kyt]
+          - ref: matrix_index_top
+            shift: [kxr, kyt]
+          - ref: matrix_inner_top
+            shift: [kxl, kyt]
+          - ref: matrix_inner_top
+            shift: [kxr, kyt]
+          #bottom of fingers and thumb
+          - ref: matrix_inner_bottom
+            shift: [kxr, kyb]
+          - ref: thumbfan_far_thumb
+            shift: [kxr, kyt]
+          - ref: thumbfan_far_thumb
+            shift: [kxr, kyb]
+          - ref: thumbfan_near_thumb
+            shift: [kxl, kyb]
+          - ref: matrix_pinky_bottom
+            shift: [kxr, kyb]
+          - ref: matrix_pinky_bottom
+            shift: [kxl, kyb]
+    _case_perimeter:
+      - type: polygon
+        points:
+          # top of fingers
+          - ref: matrix_pinky_top
+            shift: [kxl - case_wall_thickness, kyt+case_wall_thickness]
+          - ref: matrix_pinky_top
+            shift: [kxr - case_wall_thickness - px, kyt + case_wall_thickness]
+          - ref: matrix_ring_top
+            shift: [kxl - case_wall_thickness, kyt + case_wall_thickness]
+          - ref: matrix_ring_top
+            shift: [kxr - case_wall_thickness - px, kyt + case_wall_thickness]
+          - ref: matrix_middle_top
+            shift: [kxl - case_wall_thickness, kyt + case_wall_thickness + 2.2]
+          - ref: matrix_middle_top
+            shift: [kxr + case_wall_thickness, kyt + case_wall_thickness + 2.2]
+          - ref: matrix_index_top
+            shift: [kxl + case_wall_thickness + px, kyt + case_wall_thickness]
+          - ref: matrix_index_top
+            shift: [kxr + case_wall_thickness, kyt + case_wall_thickness]
+          - ref: matrix_inner_top
+            shift: [kxl + case_wall_thickness, kyt + case_wall_thickness]
+          - ref: matrix_inner_top
+            shift: [kxr + case_wall_thickness, kyt + case_wall_thickness]
+          #bottom of fingers and thumb
+          - ref: matrix_inner_bottom
+            shift: [kxr + case_wall_thickness, kyb - case_wall_thickness]
+          - ref: thumbfan_far_thumb
+            shift: [kxr + case_wall_thickness, kyt + case_wall_thickness]
+          - ref: thumbfan_far_thumb
+            shift: [kxr + case_wall_thickness, kyb - case_wall_thickness]
+          - ref: thumbfan_near_thumb
+            shift: [kxl - case_wall_thickness + px, kyb - case_wall_thickness]
+          - ref: matrix_pinky_bottom
+            shift: [kxr + case_wall_thickness, kyb - case_wall_thickness]
+          - ref: matrix_pinky_bottom
+            shift: [kxl - case_wall_thickness, kyb - case_wall_thickness]
+    _switches:
+      main:
+        type: keys
+        side: left
+        size: 14
+        bound: false
+    _keycaps:
+      main:
+        type: keys
+        side: left
+        size: [kx, ky]
+        bound: false
+        corner: 1
+    _keywell:
+      main:
+        type: outline
+        name: raw
+    _base_outline:
+      main:
+        type: outline
+        name: _keywell
+      controller:
+        type: outline
+        name: _board_perimeter
+        fillet: px
+        operation: add
+    _side_outline:
+      outer:
+        type: outline
+        name: _case_perimeter
+        fillet: px + case_wall_thickness
+      inner:
+        type: outline
+        name: _base_outline
+        operation: subtract
+    _mounting_posts:
+      $extends: outlines.exports._screw_holes
+      top_left:
+        radius: 2
+      bottom_left:
+        radius: 2
+      top_right:
+        radius: 2
+      palm:
+        radius: 2
+      thumb:
+        radius: 2
+    _mounting_post_offsets:
+      $extends: outlines.exports._screw_holes
+      top_left:
+        radius: 3
+      bottom_left:
+        radius: 3
+      top_right:
+        radius: 3
+      palm:
+        radius: 3
+      thumb:
+        radius: 3
+    _mounting_post_holes:
+      $extends: outlines.exports._screw_holes
+      top_left:
+        radius: .85
+      bottom_left:
+        radius: .85
+      top_right:
+        radius: .85
+      palm:
+        radius: .85
+      thumb:
+        radius: .85
     thumbfan_glue:
       - type: polygon
         points:
@@ -252,24 +443,83 @@ outlines:
         name: mounting_holes
         operation: subtract
 cases:
-  top:
-    plate:
-      type: outline
+  plate_replacement:
+    - type: outline
       name: plate
-      extrude: 1.6  # Standard PCB thickness
-  bottom:
-    shell:
-      type: outline
-      name: bottom_outline
-      extrude: 3  # Bottom plate thickness
-  full_case:
-    top:
-      type: case
-      name: top
-    bottom:
-      type: case
-      name: bottom
-      shift: [0, 0, -3]  # Offset by bottom thickness
+      extrude: key_clip_depth
+      operation: add
+  _bottom:
+    - type: outline
+      name: pcb
+      extrude: case_bottom_thickness
+    - type: outline
+      name: _mounting_post_offsets
+      extrude: case_bottom_thickness + case_bottom_offset
+      operation: add
+    - type: outline
+      name: _mounting_posts
+      extrude: case_bottom_thickness + case_bottom_offset + board_thickness + key_surface_depth - key_clip_depth
+      operation: add
+    - type: outline
+      name: _mounting_post_holes
+      extrude: case_bottom_offset + board_thickness + key_surface_depth - key_clip_depth
+      shift: [0, 0, case_bottom_thickness]
+      operation: subtract
+  _sides:
+    - type: outline
+      name: _side_outline
+      extrude: case_depth
+  _wire_cut_void:
+    - type: outline
+      name: _wire_cut
+      extrude: 2+case_wall_thickness
+      rotate: [0, 90, 0]
+      shift: [-case_wall_thickness-3.5, 0, case_bottom_thickness + 5]
+  _side_cut_void:
+    - type: outline
+      name: _side_cut
+      extrude: 2+case_wall_thickness
+      rotate: [0, 90, 0]
+      shift: [-case_wall_thickness-2, 0, case_bottom_thickness + case_bottom_offset + board_thickness + 2.5]
+  _top_cut_void:
+    - type: outline
+      name: _top_cut
+      extrude: 2+case_wall_thickness
+      rotate: [90, 0, 0]
+      shift: [0, 5, case_bottom_thickness + case_bottom_offset + board_thickness + 2.5]
+  _thumb_leg_mount_hole:
+    - type: outline
+      name: _thumb_leg_mount_hole
+      extrude: case_leg_mount_hole_depth+1
+      rotate: [30, 90, 0]
+      shift: [0, 0, case_depth / 2]
+  _top_leg_mount_hole:
+    - type: outline
+      name: _top_leg_mount_hole
+      extrude: case_leg_mount_hole_depth+1
+      rotate: [0, 90, 0]
+      shift: [0, 0, case_depth / 2]
+  base:
+    - type: case
+      name: _bottom
+    - type: case
+      name: _sides
+      operation: add
+    - type: case
+      name: _wire_cut_void
+      operation: subtract
+    - type: case
+      name: _side_cut_void
+      operation: subtract
+    - type: case
+      name: _top_cut_void
+      operation: subtract
+    - type: case
+      name: _thumb_leg_mount_hole
+      operation: subtract
+    - type: case
+      name: _top_leg_mount_hole
+      operation: subtract
 pcbs:
   top_plate:
     include_keys: false
